--- a/app/src/main/res/layout/item_news_content.xml
+++ b/app/src/main/res/layout/item_news_content.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/len_76"
     android:layout_marginTop="@dimen/len_1"
     android:background="@drawable/list_item_selector"
     android:orientation="horizontal"
@@ -11,9 +10,9 @@
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/imgIv"
+        android:layout_gravity="center_vertical"
         android:layout_width="@dimen/len_76"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_placeholder_img" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/titleTv"
