--- a/app/src/main/res/layout/item_task_layout.xml
+++ b/app/src/main/res/layout/item_task_layout.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/len_76"
+    android:layout_height="wrap_content"
     android:background="@drawable/list_item_selector"
     android:orientation="horizontal"
     android:padding="@dimen/len_10">
 
-
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/imgIv"
-        android:layout_gravity="center_vertical"
-        android:layout_width="@dimen/len_76"
-        android:layout_height="wrap_content" />
-
     <TextView
-        android:id="@+id/titleTv"
+        android:id="@+id/nameTv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
