更新uiil版本  新增crash回调

--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -28,4 +28,9 @@
         android:layout_height="wrap_content"/>
 
 
+    <com.yzq.common.widget.ProgressButton
+        android:layout_width="@dimen/len_100"
+        android:layout_height="@dimen/len_60" />
+
+
 </android.support.v7.widget.LinearLayoutCompat>
