--- a/common/src/main/res/layout/view_horizontal_item_layout.xml
+++ b/common/src/main/res/layout/view_horizontal_item_layout.xml
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/list_item_selector"
-    android:minHeight="@dimen/len_48"
-    android:orientation="horizontal"
-    android:padding="@dimen/len_10">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_item_selector"
+        android:minHeight="@dimen/len_48"
+        android:padding="@dimen/len_10">
 
 
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/iconIv"
-        android:layout_width="@dimen/len_16"
-        android:layout_height="@dimen/len_16"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        app:srcCompat="@drawable/ic_placeholder_img" />
+            android:id="@+id/iconIv"
+            app:srcCompat="@drawable/ic_no_data"
+            android:layout_width="@dimen/len_20"
+            android:scaleType="centerCrop"
+            app:tint="@color/colorAccent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="@dimen/len_20"/>
 
 
     <TextView
-        android:id="@+id/titleTv"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/len_10"
-        android:gravity="center_vertical"
-        android:text="标题"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/arrowIv"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toEndOf="@+id/iconIv"
-        app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iconIv"
+            android:id="@+id/titleTv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="标题"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginLeft="@dimen/len_10"
+            app:layout_goneMarginLeft="@dimen/len_0"
+            android:textColor="@color/black"
+            android:layout_weight="1"/>
 
-        app:layout_goneMarginStart="@dimen/len_0" />
+
+    <TextView
+
+            android:id="@+id/contentTv"
+            android:text=""
+            android:textColor="@color/gray_700"
+            app:layout_constraintStart_toEndOf="@id/titleTv"
+            android:layout_width="0dp"
+            android:gravity="right"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingRight="@dimen/len_10"
+            app:layout_constraintEnd_toStartOf="@id/arrowIv"
+            android:layout_height="match_parent"/>
 
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/arrowIv"
-        android:layout_width="@dimen/len_16"
-        android:layout_height="@dimen/len_16"
-        android:layout_gravity="center_vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_right" />
+            android:id="@+id/arrowIv"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="@dimen/len_16"
+            android:layout_height="@dimen/len_16"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginLeft="@dimen/len_10"
+            app:srcCompat="@drawable/ic_arrow_right"/>
 
 
 </android.support.constraint.ConstraintLayout>
