--- a/app/src/main/res/layout/content_news.xml
+++ b/app/src/main/res/layout/content_news.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".ui.NewsActivity"
+    tools:showIn="@layout/activity_news">
 
 
     <android.support.v7.widget.RecyclerView
