--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -44,5 +44,12 @@
 
     </style>
 
+    <!--Button-->
+
+    <style name="button">
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
 
 </resources>
