--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -7,7 +7,7 @@
     android:padding="@dimen/len_10">
 
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgIv"
         android:layout_gravity="center_vertical"
         android:layout_width="@dimen/len_76"
