--- a/custom_view/src/main/res/drawable/ic_arrow_up.xml
+++ b/custom_view/src/main/res/drawable/ic_arrow_up.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:viewportHeight="1024"
     android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00ADEE" android:pathData="M96.2,671.81l415.8,-415.63 415.8,415.63 -63.62,63.44 -352.21,-352.02 -352.1,352.02z"/>
+    <path android:fillColor="#FF000000" android:pathData="M236.5,625.5l274.26,-274.26 274.26,274.26z"/>
 </vector>
