--- a/app/src/main/res/layout/activity_zxing.xml
+++ b/app/src/main/res/layout/activity_zxing.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/resultTv"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/len_48"
+        android:layout_height="wrap_content"
         android:gravity="center" />
 
     <Button
