--- a/common/src/main/res/layout/toolbar.xml
+++ b/common/src/main/res/layout/toolbar.xml
@@ -9,7 +9,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_collapseMode="pin">
+        app:layout_collapseMode="pin"
+        app:popupTheme="@style/ToolbarTheme">
 
     </androidx.appcompat.widget.Toolbar>
 
