完善style关于键盘弹出的相关配置

--- a/common/src/main/res/values-v26/styles.xml
+++ b/common/src/main/res/values-v26/styles.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,15 +11,14 @@
         <item name="colorControlHighlight">@color/wave_color</item>
         <item name="android:textSize">@dimen/font_14</item>
         <item name="android:textColor">@color/darkGray</item>
-
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <!--<item name="android:windowAnimationStyle">@style/AnimationActivity</item>-->
-        <!--slider-->
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowDisablePreview">true</item>
         <item name="android:windowBackground">@color/bg_gray</item>
-        <!--<item name="android:splitMotionEvents">false</item>&lt;!&ndash;取消多点触控&ndash;&gt;-->
+        <item name="android:screenOrientation">portrait</item>
+        <item name="android:configChanges">screenSize|keyboardHidden|orientation</item>
+        <item name="android:windowSoftInputMode">adjustPan|stateHidden</item>
 
     </style>
 </resources>
