--- a/common/src/main/res/layout/toolbar.xml
+++ b/common/src/main/res/layout/toolbar.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="@dimen/len_0"
+    app:elevation="0dp"
     android:theme="@style/AppTheme.AppBarOverlay">
 
     <androidx.appcompat.widget.Toolbar
