--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00ADEE</color>
-    <color name="colorPrimaryDark">#00ADEE</color>
-    <color name="colorAccent">#00ADEE</color>
+
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#03A9F4</color>
+    <color name="primary_light">#BBDEFB</color>
+    <!--主要文字颜色-->
+    <color name="primary_text">#212121</color>
+    <!--次要文字颜色-->
+    <color name="secondary_text">#757575</color>
+    <!--图标颜色-->
+    <color name="icons">#FFFFFF</color>
+    <!--分割线颜色-->
+    <color name="divider">#BDBDBD</color>
+
 
     <!--浅灰色-->
     <color name="lightGray">#888888</color>
@@ -14,8 +25,6 @@
     <color name="bg_gray">#F2F2F2</color>
     <!--文字提示颜色-->
     <color name="font_hint">#919191</color>
-    <!--分割线颜色-->
-    <color name="divider">#F2F2F2</color>
 
 
     <color name="trans">#00000000</color>
