--- a/common/src/main/res/layout/loading_dialog_layout.xml
+++ b/common/src/main/res/layout/loading_dialog_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -23,4 +23,4 @@
         android:textColor="?android:textColorSecondary"
         android:text="加载中..." />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
