--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -1,17 +1,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorButtonNormal">@color/colorAccent</item>
-        <item name="titleTextColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:icon">@color/icons</item>
+        <item name="android:divider">@color/divider</item>
+
         <item name="colorControlHighlight">@color/wave_color</item>
         <item name="android:textSize">@dimen/font_14</item>
-        <item name="android:textColor">@color/darkGray</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">false</item>
@@ -29,16 +31,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
 
     <!--toolbar样式-->
-    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Light">
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.Light">
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:colorBackground">@color/white</item>
-        <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+        <!--<item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>-->
         <item name="colorControlNormal">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
 
@@ -54,7 +56,7 @@
 
 
     <!--tablayout样式-->
-    <style name="tabLayout">
+    <style name="tabLayout" parent="Widget.MaterialComponents.TabLayout">
         <item name="android:background">@color/white</item>
         <item name="tabMode">fixed</item>
         <item name="tabIndicatorColor">@color/colorAccent</item>
@@ -64,11 +66,16 @@
     </style>
 
     <!--Button-->
+    <style name="button" parent="Widget.MaterialComponents.Button">
 
-    <style name="button">
-        <item name="android:textColor">@color/white</item>
+
 
     </style>
 
+
+    <style name="outline_button" parent="Widget.MaterialComponents.Button.OutlinedButton">
+
+
+    </style>
 
 </resources>
